--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,12 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Ugandan Knuckles
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
-
+description: Only the queen knows da wae
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://i.kym-cdn.com/entries/icons/mobile/000/025/067/ugandanknuck.jpg
 
 #
 # Flags below are optional
